# zettactl-templates

./: README.md
c/: get.c  publisher.c  query.c  subscriber.c
c/common/: CMakeLists.txt
c/common/src/: main.c
cpp/: get.cpp  publisher.cpp  query.cpp  subscriber.cpp
cpp/common/: CMakeLists.txt  getargs.h
cpp/common/src/: main.cpp
py/: get.py  publisher.py  query.py  subscriber.py
py/common/src/: main.py
rs/: get.rs  publisher.rs  query.rs  subscriber.rs
rs/common/: Cargo.toml
rs/common/src/: main.rs
