[package]
name = "your-workspace-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0" }
futures = { version = "0.3.28" }
zenoh = { version = "0.10.0-rc" }
clap = { version = "3.2.23" }
env_logger = { version = "0.10.0" }
